--- a/dotNet5781_03b_8658_4874/Window2.xaml
+++ b/dotNet5781_03b_8658_4874/Window2.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <TextBlock  Text="Enter the travel distance: " HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="39" Width="217"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="197,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="sentButton" Content="sent" HorizontalAlignment="Left" Margin="92,74,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button x:Name="sentButton" Content="Button" HorizontalAlignment="Left" Margin="97,54,0,0" VerticalAlignment="Top" Width="75" Click="sentButton_Click"/>
 
     </Grid>
 </Window>
