--- a/dotNet5781_03b_8658_4874/App.xaml
+++ b/dotNet5781_03b_8658_4874/App.xaml
@@ -4,6 +4,20 @@
              xmlns:local="clr-namespace:dotNet5781_03b_8658_4874"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="myButtonStyle"            TargetType="Button">
+            <Setter Property="FontFamily"               Value="Ink Free" />
+            <Setter Property="FontWeight"               Value="Bold" />
+        </Style>
+        <Style x:Key="myTextBlockStyle"            TargetType="TextBlock">
+            <Setter Property="FontSize"               Value="16" />
+            <Setter Property="Foreground"               Value="blue"/>
+            <Setter Property="FontFamily"               Value="Ink Free" />
+            <Setter Property="FontWeight"               Value="Bold" />
+        </Style>
+        <Style x:Key="myLabelStyle"            TargetType="Label">
+            <Setter Property="FontSize"               Value="16" />
+            <Setter Property="FontFamily"               Value="Ink Free" />
+            <Setter Property="FontWeight"               Value="Bold" />
+        </Style>
     </Application.Resources>
 </Application>
